--- a/curriculo.html
+++ b/curriculo.html
@@ -28,5 +28,13 @@
 
 		<p><strong>Formação Acadêmica </strong></p>
 		<p> ● UNIP - Redes de Computadores — Graduação
-	</body>
+
+		<p><strong> Cursos de Aperfeiçoamento Profissional</strong></p> 
+			<ul>
+		 		<li>Lógica de Programação e Algoritmos - DevMedia, Março - 2020 - 28 Horas</li>
+				<li>HTML 5 - Alura, Agosto - 2020 - 15 horas</li>
+				<li>CSS - Alura, Outubro - 2020 - 8 Horas</li>
+				<li>JavaScript - Alura - Outubro - 10 Horas</li>
+			</ul>
+	</body>	
 </html>	
