--- a/curriculo.html
+++ b/curriculo.html
@@ -36,5 +36,11 @@
 				<li>CSS - Alura, Outubro - 2020 - 8 Horas</li>
 				<li>JavaScript - Alura - Outubro - 10 Horas</li>
 			</ul>
+
+		<img id="foto-final" src="html+css.jpg">
+
+		<footer>
+			<p>© Copyright Curriculo Alisson Marreiros - 2020
+		</footer>
 	</body>	
 </html>	
